# next-lib

./: README.md  library.db  project_explanation.md  run.bat  seed.py  seed_books.py
Amit/: README.md  project_explanation.md  seed.py  seed_books.py  seed_data.py
Amit/backend/: library.db  main.py
Amit/frontend/: books.html  register.html
Users/smits/OneDrive/Desktop/Amit/: README.md  library.db  seed_data.py
Users/smits/OneDrive/Desktop/Amit/backend/: auth.py  database.py  library.db  main.py  models.py  requirements.txt  schemas.py
Users/smits/OneDrive/Desktop/Amit/frontend/: admin_dashboard.html  app.js  login.html  register.html  return.html  student_dashboard.html  style.css
backend/: auth.py  database.py  library.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
frontend/: admin_dashboard.html  app.js  books.html  index.html  issue.html  login.html  register.html  return.html  student_dashboard.html  style.css
